--- a/src/PersonalLibrary.Api/appsettings.json
+++ b/src/PersonalLibrary.Api/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceOptions": {
+    "SwaggerConfiguration": {
+      "Contact": {
+        "Email": "mladenmiljus@outlook.com",
+        "Name": "Mladen Miljuš",
+        "Url": ""
+      }
+    }
+  }
 }
