CQRS pattern and Repository pattern - not yet tested

--- a/src/PersonalLibrary.Api/PersonalLibrary.Api.csproj
+++ b/src/PersonalLibrary.Api/PersonalLibrary.Api.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup Label="Project References">
     <ProjectReference Include="..\PersonalLibrary.BusinessModels\PersonalLibrary.BusinessModels.csproj" />
+    <ProjectReference Include="..\PersonalLibrary.Services.Interfaces\PersonalLibrary.Services.Interfaces\PersonalLibrary.Services.Interfaces.csproj" />
+    <ProjectReference Include="..\PersonalLibrary.Services\PersonalLibrary.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup Label="Package References">
