--- a/src/PersonalLibrary.Api/appsettings.Development.json
+++ b/src/PersonalLibrary.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PersonalLibraryConnection": "Server=.;Database=PersonalLibrary;Trusted_Connection=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
